RESOLVED FIXED87481
[EFL] EFL's LayoutTestController does not support setTextDirection
https://bugs.webkit.org/show_bug.cgi?id=87481
Summary [EFL] EFL's LayoutTestController does not support setTextDirection
Chris Dumez
Reported 2012-05-25 02:37:56 PDT
EFL's LayoutTestController does not support setTextDirection which is tested by the following test case: fast/html/set-text-direction.html
Attachments
Patch (7.12 KB, patch)
2012-05-25 03:03 PDT, Chris Dumez
no flags
Patch (7.10 KB, patch)
2012-06-15 03:58 PDT, Chris Dumez
no flags
Patch (8.66 KB, patch)
2012-06-18 23:35 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-05-25 03:03:58 PDT
Gyuyoung Kim
Comment 2 2012-05-25 17:34:12 PDT
Comment on attachment 144022 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=144022&action=review > Source/WebKit/efl/ewk/ewk_view.cpp:3992 > + WebCore::Frame* focusedFrame = priv->page->focusController()->focusedFrame(); Is focusedFrameOrMainFrame() better than focusedFrame() so that there is no focusedFrame() ?
Chris Dumez
Comment 3 2012-06-15 03:58:01 PDT
Created attachment 147787 [details] Patch Take feedback into consideration and rebase on master.
Hajime Morrita
Comment 4 2012-06-18 22:46:40 PDT
Comment on attachment 147787 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=147787&action=review > Source/WebKit/efl/ewk/ewk_view.cpp:3976 > + if (!editor || !editor->canEdit()) Frame always has an editor object. You don't need to check the nullity. > Source/WebKit/efl/ewk/ewk_view.cpp:3979 > + switch (direction) { Maybe you adopt assert-matching-enums pattern which is used in chromium. Then you don't need to duplicate these switch statements. http://trac.webkit.org/browser/trunk/Source/WebKit/chromium/src/AssertMatchingEnums.cpp
Chris Dumez
Comment 5 2012-06-18 23:35:08 PDT
Created attachment 148260 [details] Patch Take morrita's feedback into consideration.
WebKit Review Bot
Comment 6 2012-06-19 01:38:55 PDT
Comment on attachment 148260 [details] Patch Clearing flags on attachment: 148260 Committed r120692: <http://trac.webkit.org/changeset/120692>
WebKit Review Bot
Comment 7 2012-06-19 01:38:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.