[EFL] EFL's LayoutTestController does not support setTextDirection https://bugs.webkit.org/show_bug.cgi?id=87481

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-06-19
Reviewed by Hajime Morita.

Source/WebKit/efl:

Add new Ewk_View method to set the text direction, by calling
Editor::setBaseWritingDirection() internally, as Mac and Chromium
ports do.

* WebCoreSupport/AssertMatchingEnums.cpp:
* ewk/ewk_view.cpp:
(ewk_view_text_direction_set):
* ewk/ewk_view.h:

Tools:

Implement setTextDirection in EFL's LayoutTestController and
properly reset its value between test cases to avoid flakiness.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::resetDefaultsToConsistentValues):
* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::setTextDirection):

LayoutTests:

Unskip related test case now that EFL's LayoutTestController
implements setTextDirection.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/107302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120692 268f45cc-cd09-0410-ab3c-d52691b4dbfc